--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,547 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width:1250px) {
+
+  .main_one {
+    margin-bottom: 200px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .pic-one {
+    display: none;
+  }
+
+  .menu-li {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-left: 30px;
+  }
+
+  .menu-li ul li {
+    list-style: none;
+    font-weight: 800;
+    font-size: 85px;
+    line-height: 1;
+  }
+
+  .contact {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+    font-family: sans-serif;
+  }
+
+  .social a {
+    color: #d9d9d9;
+    text-decoration: none;
+    margin-left: 30px;
+    font-size: 15px;
+  }
+
+  .info h4 {
+    color: #d9d9d9;
+    line-height: 1.5;
+    font-weight: 500;
+    font-size: 15px;
+  }
+
+  .home .design {
+    padding-top: 130px;
+  }
+
+  .home .design h1 {
+    font-size: 100px;
+    font-weight: 800;
+  }
+
+  .name .tag {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .tag h4 {
+    width: 40%;
+    margin-left: 20px;
+  }
+
+  .tag h4 {
+    font-size: 17px;
+    font-weight: 100;
+    color: #d9d9d9;
+  }
+
+  .name .services {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .services h4 {
+    width: 40%;
+    margin-left: 20px;
+  }
+
+  .services h4 {
+    font-size: 17px;
+    font-weight: 100;
+    color: #d9d9d9;
+
+  }
+
+  .reasearch {
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+  }
+
+  .reasearch .reasearch-one {
+    padding-left: 15px;
+    width: calc(50% - 10px);
+  }
+
+  .reasearch .reasearch-one .reasearch-two h5 {
+    font-size: 18px;
+  }
+
+  .reasearch .reasearch-one h2 {
+    padding-top: 10px;
+    font-size: 40px;
+  }
+
+  .reasearch .reasearch-one .reasearch-three h4 {
+    font-weight: 300;
+    padding-top: 7px;
+    font-size: 13px;
+  }
+
+  .reasearch .reasearch-one .reasearch-three h5 {
+    width: 60%;
+    font-weight: 100;
+    padding-top: 15px;
+    font-size: 14px;
+  }
+
+  .video-one .video {
+    width: 97%;
+    height: 300px;
+    margin-bottom: 150px;
+  }
+
+  .video-one .video .video-element video {
+    width: 100%;
+    height: 100%px;
+    object-fit: cover;
+  }
+
+  .footer .footer-one h2 {
+    width: 20%;
+    font-size: 15px;
+    margin-left: 22px;
+    line-height: 1.3;
+    font-weight: 400;
+  }
+
+  .footer-two {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #d9d9d9;
+    margin-top: 50px;
+    line-height: 1.3;
+    width: 100%;
+  }
+
+  .footer .ft-one {
+    width: 70%;
+  }
+
+  .footer .ft-one h2 {
+    font-size: 15px;
+    font-weight: 400;
+  }
+
+  .footer .ft-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+    margin-right: 22px;
+    width: 20%;
+  }
+
+  .footer .ft-two h2 {
+    font-size: 15px;
+    font-weight: 300;
+  }
+
+  .footer .head h1 {
+    margin-top: 50px;
+    font-size: 200px;
+    text-align: center;
+    color: #212121;
+  }
+
+  .footer .privacy {
+    margin-top: 50px;
+  }
+
+  .privacy .cookies {
+    gap: 2px;
+  }
+
+  .privacy .cookies h2 {
+    font-size: 15px;
+    font-weight: 300;
+  }
+
+  .privacy .links {
+    gap: 10px;
+  }
+
+  .privacy .links h2 {
+    font-size: 15px;
+    font-weight: 300;
+  }
+
+  .name-two {
+    margin-top: -80px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width:768px) {
+  .menu-container .logo {
+    left: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+
+  .menu-container .logo h2 {
+    font-size: 15px;
+
+  }
+
+  .menu-container .menu-button {
+    right: 10px;
+  }
+
+  .menu-container .menu-button h2 {
+    font-size: 15px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .pic-one {
+    display: none;
+  }
+
+  .menu-li {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-left: 32px;
+    top: 0;
+  }
+
+  .menu-li ul li {
+    list-style: none;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 1.8;
+    letter-spacing: -0.3px;
+  }
+
+  .contact {
+    display: none;
+    width: 50%;
+  }
+
+  .social {
+    display: flex;
+    margin-left: -55px;
+    margin-top: 20px;
+  }
+
+  .social a {
+    color: #d9d9d9;
+    text-decoration: none;
+    font-size: 15px;
+  }
+
+  .info {
+    margin-top: 0;
+    margin-left: -15px;
+  }
+
+  .info h4 {
+    color: #d9d9d9;
+    line-height: 1.5;
+    font-weight: 500;
+    font-size: 15px;
+  }
+
+  .home .design {
+    padding-top: 120px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .home .design h1 {
+    font-size: 70px;
+    font-weight: 800;
+    line-height: 1.1;
+  }
+
+  .home .design-one {
+    margin-top: 30px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .home .design-one h5 {
+    font-size: 15px;
+  }
+
+
+  .featured .features h2 {
+    font-size: 15px;
+    margin-left: 10px;
+
+  }
+
+  .featured .features-one h2 a {
+    font-size: 15px;
+    margin-right: 10px;
+  }
+
+  .name .tag {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 10px;
+  }
+
+  .tag h4 {
+    width: 100%;
+    margin-left: 20px;
+  }
+
+  .tag h4 {
+    font-size: 13px;
+    font-weight: 100;
+    color: #d9d9d9;
+  }
+
+  .reasearch {
+    display: flex;
+    align-items: start;
+    justify-content: start;
+  }
+
+  .reasearch .reasearch-one {
+    border-left: 1px solid gray;
+    padding-left: 10px;
+    width: calc(45% - -25px);
+
+  }
+
+  .reasearch .reasearch-one .reasearch-two h5 {
+    color: red;
+    padding-top: 30px;
+    font-size: 18px;
+  }
+
+  .reasearch .reasearch-one h2 {
+    padding-top: 10px;
+    font-size: 40px;
+  }
+
+  .reasearch .reasearch-one .reasearch-three h4 {
+    font-weight: 300;
+    padding-top: 7px;
+    font-size: 15px;
+  }
+
+  .reasearch .reasearch-one .reasearch-three h5 {
+    width: 50%;
+    font-weight: 100;
+    padding-top: 15px;
+    font-size: 12px;
+    color: #464646;
+  }
+
+  .footer {
+    width: 100%;
+    height: 800px;
+  }
+
+  .footer .footer-one h2 {
+    width: 40%;
+    font-size: 12px;
+    margin-left: 15px;
+    line-height: 1.3;
+    font-weight: 400;
+    margin-top: 80px;
+  }
+
+  .footer-two {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    color: #d9d9d9;
+    margin-top: 30px;
+    line-height: 1.3;
+    width: 100%;
+  }
+
+  .footer .ft-one {
+    width: 100%;
+    margin-right: 10px;
+  }
+
+  .footer .ft-one h2 {
+    font-size: 12px;
+    font-weight: 100;
+  }
+
+  .footer .ft-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    margin-right: 22px;
+    width: 87%;
+    margin-top: 20px;
+  }
+
+  .footer .ft-two h2 {
+    font-size: 12px;
+    font-weight: 100;
+  }
+
+  .footer .head h1 {
+    margin-top: 20px;
+    font-size: 100px;
+    text-align: center;
+    color: #212121;
+  }
+
+  .footer .privacy {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    margin-top: 20px;
+  }
+
+  .footer .privacy .cookies {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer .privacy .cookies h2 {
+    font-size: 12px;
+    font-weight: 100;
+  }
+
+  .footer .privacy .links {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .footer .privacy .links h2 {
+    font-size: 12px;
+    font-weight: 100;
+  }
+
+  .video-one .video {
+    width: 97%;
+    height: 220px;
+    margin-bottom: 150px;
+  }
+
+  .video-one .video .video-element video {
+    width: 100%;
+    height: 100%px;
+    object-fit: cover;
+  }
+
+  .name-two {
+    margin-top: -100px;
+    width: 100%;
+  }
+
+}
+
+@media screen and (max-width: 700px) {
+  .reasearch {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .reasearch .reasearch-one {
+    border-left: 1px solid gray;
+    padding-left: 10px;
+    width: calc(50% - -170px);
+    height: 270px;
+    margin-left: 20px;
+  }
+
+  .reasearch .reasearch-one .reasearch-two h5 {
+    color: red;
+    padding-top: 30px;
+    font-size: 18px;
+  }
+
+  .reasearch .reasearch-one h2 {
+    padding-top: 10px;
+    font-size: 40px;
+  }
+
+  .reasearch .reasearch-one .reasearch-three h4 {
+    font-weight: 300;
+    padding-top: 7px;
+    font-size: 15px;
+  }
+
+  .reasearch .reasearch-one .reasearch-three h5 {
+    width: 60%;
+    font-weight: 100;
+    padding-top: 15px;
+    font-size: 12px;
+    color: #464646;
   }
 }
